--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ chardet==3.0.4
 cycler==0.10.0
 dill==0.3.1.1
 docopt==0.6.2
+entrypoints==0.3
+flake8==3.7.9
 future==0.18.2
-gast==0.2.2
+gast==0.3.3
 google-auth==1.14.1
 google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
@@ -23,6 +25,7 @@ Keras-Preprocessing==1.1.0
 kiwisolver==1.2.0
 Markdown==3.2.1
 matplotlib==3.2.1
+mccabe==0.6.1
 more-itertools==8.2.0
 numpy==1.18.3
 oauthlib==3.1.0
@@ -37,6 +40,8 @@ protobuf==3.11.3
 py==1.8.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.5.0
+pyflakes==2.2.0
 pyparsing==2.4.7
 pytest==5.4.1
 python-dateutil==2.8.1
@@ -45,7 +50,8 @@ requests-oauthlib==1.3.0
 rsa==4.0
 scipy==1.4.1
 six==1.14.0
-tensorboard==2.1.1
+tensorboard==2.2.1
+tensorboard-plugin-wit==1.6.0.post3
 tensorflow==2.1.0
 tensorflow-datasets==3.1.0
 tensorflow-estimator==2.1.0
