--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\amnev\\Anaconda3\\envs\\phd-test\\python.exe"
+    "python.pythonPath": "C:\\Users\\AMNeves\\anaconda3\\envs\\phd-ml\\python.exe"
 }
