--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 absl-py==0.9.0
 astor==0.8.1
+astroid==2.4.2
+astunparse==1.6.3
+atomicwrites==1.4.0
 attrs==19.3.0
 cachetools==4.1.0
 certifi==2020.4.5.1
 chardet==3.0.4
+colorama==0.4.3
 cycler==0.10.0
 dill==0.3.1.1
 docopt==0.6.2
 entrypoints==0.3
-flake8==3.7.9
+flake8==3.8.3
 future==0.18.2
 gast==0.3.3
 google-auth==1.14.1
@@ -18,16 +22,20 @@ googleapis-common-protos==1.51.0
 grpcio==1.28.1
 h5py==2.10.0
 idna==2.9
+importlib==1.0.4
 importlib-metadata==1.6.0
 isort==4.3.21
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 kiwisolver==1.2.0
+lazy-object-proxy==1.4.3
 Markdown==3.2.1
 matplotlib==3.2.1
 mccabe==0.6.1
 more-itertools==8.2.0
-numpy==1.18.3
+mypy==0.781
+mypy-extensions==0.4.3
+numpy==1.19.0
 oauthlib==3.1.0
 opt-einsum==3.2.1
 packaging==20.3
@@ -40,8 +48,9 @@ protobuf==3.11.3
 py==1.8.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycodestyle==2.5.0
+pycodestyle==2.6.0
 pyflakes==2.2.0
+pylint==2.5.3
 pyparsing==2.4.7
 pytest==5.4.1
 python-dateutil==2.8.1
@@ -50,17 +59,21 @@ requests-oauthlib==1.3.0
 rsa==4.0
 scipy==1.4.1
 six==1.14.0
-tensorboard==2.2.1
+tensorboard==2.2.2
 tensorboard-plugin-wit==1.6.0.post3
-tensorflow==2.1.0
+tensorflow==2.2.0
 tensorflow-datasets==3.1.0
-tensorflow-estimator==2.1.0
+tensorflow-estimator==2.2.0
 tensorflow-metadata==0.21.2
 termcolor==1.1.0
+toml==0.10.1
 tqdm==4.45.0
+typed-ast==1.4.1
+typing-extensions==3.7.4.2
 urllib3==1.25.9
 wcwidth==0.1.9
 Werkzeug==1.0.1
+wincertstore==0.2
 wrapt==1.12.1
 yarg==0.1.9
 zipp==3.1.0
