--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,25 +23,17 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest mypy
+          pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Python Code Quality and Lint
-        uses: ricardochaves/python-lint@v1.1.0
-        with:
-          # A list of all paths to test
-          python-root-list: . # optional, default is .
-          # Use Pylint
-          use-pylint: true # optional, default is true
-          # Use pycodestyle
-          use-pycodestyle: true # optional, default is true
-          # Use Flake8
-          use-flake8: true # optional, default is true
-          # Use Black
-          use-black: true # optional, default is true
-          # Use mypy
-          use-mypy: true # optional, default is true
-          # Use isort
-          use-isort: true # optional, default is true
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
+      - name: Lint with isort
+        run: |
+          isort
       - name: Test with pytest
         run: |
           pytest
