--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,7 @@
 [flake8]
 exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,CapsNet-Keras
-
+max-complexity = 10
+max-line-length = 127
 [isort]
 skip=.git,__pycache__,docs/source/conf.py,old,build,dist,CapsNet-Keras
+line_length=127
